--- a/cancer_dataset.ipynb
+++ b/cancer_dataset.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib as mlt\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
   },
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +766,7 @@
        "30                          NaN  "
       ]
      },
-     "execution_count": 332,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +858,7 @@
        "      dtype='object', name='Age_Group')"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +904,7 @@
        "array(['Female', 'Male', 'Male and Female'], dtype=object)"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +935,7 @@
        "       'Stomach', 'Testis', 'Thyroid', 'Urinary Bladder'], dtype=object)"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +955,7 @@
        "array(['Mortality', 'Incidence'], dtype=object)"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,16 +967,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1c3b8bc8f40>"
+       "<seaborn.axisgrid.FacetGrid at 0x1c3c800fac0>"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1033,13 +1034,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There are some staggering and some surprising observations that the graphs have shown."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I want to also know the cancer event type (mortality or incident) according to gender (male, female, male and female)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Incidence</th>\n",
+       "      <th>Mortality</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>9025.0</td>\n",
+       "      <td>8664.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>8303.0</td>\n",
+       "      <td>8303.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male and Female</th>\n",
+       "      <td>10469.0</td>\n",
+       "      <td>9747.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Incidence  Mortality\n",
+       "Gender                               \n",
+       "Female              9025.0     8664.0\n",
+       "Male                8303.0     8303.0\n",
+       "Male and Female    10469.0     9747.0"
+      ]
+     },
+     "execution_count": 475,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gender_event=asian_islander[['Gender','Cancer_Event_Type']]\n",
+    "gender_event.set_index('Gender', inplace=True)\n",
+    "gender_event=pd.get_dummies(gender_event['Cancer_Event_Type']).groupby(by='Gender').sum()\n",
+    "gender_event\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "I want to know how many persons have been diagnosed of cancer by age group.\n",
     "I have filtered the age group and count of people diagnosed with cancer and assigned it to a new dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
